css/style.css
@font-face {
  font-family: Circular;
  src: url('circular-medium.woff2');
}

body {
  font-family: Circular,Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #222326;
}

.navbar-dark {
  background-color: rgba(0,0,0,.6);
}

.navbar-dark .navbar-nav>li>a {
  color: #fff;
  padding: 28px 17px;
  font-weight: 700;
  line-height: 24px;
}

.nav>li>a:focus,
.nav>li>a:hover {
  background-color: inherit;
  color: #9bf0e1;
}

.nav .divider {
  background-color: #d9dadc;
  width: 1px;
  height: 16px;
  margin: 32px 17px;
}

.navbar-logo {
  margin-top: 20px;
  margin-bottom: 20px;
  width: 132px;
  height: 40px;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
  float: left;
  background-image: url('../img/logo.svg');
}

.bg-main {
  width: 100%;
  height: 100%;
  background: linear-gradient(50deg, #ff4169 0, #7c26f8 100%);
  position: fixed;
  left: 0;
  top: 0;
  z-index: -1;
}

.bg-main-img {
  display: block;
  background-image: url('../img/bg-albums.png');
  width: 100%;
  height: 100%;
  background-position: center;
}

.text-white {
  color: white;
}

.text-aquamarine {
  color: #9bf0e1;
}

.jumbotron {
  background: none;
  padding: 100px 0;
  margin: 0;
  text-align: center;
}

.bg-white {
  background-color: #fff;
}

.carousel-control.right, .carousel-control.left {
  background: none;
}

.btn, .navbar .navbar-nav .navbar-btn {
  padding: 17px 48px;
  font-size: 14px;
  line-height: 1;
  border-radius: 500px;
  padding: 18px 48px 16px;
  transition-property: background-color,border-color,color,box-shadow,filter;
  transition-duration: .3s;
  border-width: 0;
  letter-spacing: 2px;
  min-width: 160px;
  text-transform: uppercase;
  white-space: normal;
}


.jumbotron .btn {
  margin: 20px 10px 30px;
}

.btn-solid {
  color: #fff;
  background-color: #7c25f8;
}
.btn-solid:hover {
  color: #fff;
  background-color: #6207e3;
}

.btn-lg {
  font-size: 16px;
  line-height: 1;
  border-radius: 500px;
  padding: 21px 56px 19px;
}

.item h1 {
  font-weight: 900;
}

.text-signup a {
  color: #fff;
  text-decoration: underline;
}

#carousel-tour {
  margin-top: 50px;
}

a.btn-scroll {
  text-decoration: none;
  color: white;
  display: block;
  text-align: center;
}

a.btn-scroll:hover {
  color: #9bf0e1;
}

.btn-scroll-text {
  text-transform: uppercase;
  transition: color .3s ease-in-out;
  display: block;
  font-weight: 700;
  letter-spacing: .1em;
  margin-bottom: 20px;
}

.text-klein-purple {
  color: #7c25f8;
}

h2 {
  font-size: 50px;
  line-height: 1;
  margin: 0 0 .75em;
  font-weight: 900;
}

h3 {
  font-size: 40px;
  font-weight: 900;
  line-height: 1.4;
}

.jumbotron-whats-on {
  text-align: left;
  padding: 180px 0;
}

.jumbotron p {
  font-weight: 400;
  font-size: 18px;
  margin: 1em 0;
}

.albums {
  box-shadow: 0 0 8px rgba(0,0,0,.3);
}

.album-img {
  padding: 0;
}

.iphone {
  width: 358px;
  height: 730px;
  padding: 80px 22px 0;
  margin-bottom: 30px;
  background: url('../img/iphone-klein-purple.png') no-repeat;
  background-size: cover;
}

.iphone-1, .iphone-4 {
  margin-top: 200px;
}

.devices-container {
  margin-top: -350px;
  margin-bottom: -620px;
  margin-right: -100%;
  float: left;
  transform: rotate(30deg) translate3d(0,40px,0);
}

.devices-container img {
  max-width: 100%;
}

